Lab3/service-dotnet-rest-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${REST_API_NAME}"
  labels:
    app: "${REST_API_NAME}"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: "${PORT_HTTP}"              
  selector:
    app: "${REST_API_NAME}"
