Lab3/ingress-dotnet-rest-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-rest-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /dotnet/
        pathType: Prefix
        backend:
          service:
            name: dotnet-rest-api
            port:
              number: 8000
